--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,1 +1,12 @@
-descricao.not.blank=Descrição não deve estar em branco.
+descricao.not.blank=Campo descrição não pode estar em branco.
+nome.not.blank=Campo nome não pode estar em branco.
+
+cpf.not.empty=Campo CPF é obrigatorio.
+
+produto.not.null=Campo produto é obrigatorio.
+quantidade.not.null=Campo quantidade é obrigatorio.
+cliente.not.null=Campo cliente é obrigatorio.
+total.not.null=Campo total é obrigatorio.
+
+cpf.not.valid=Informe um CPF valido.
+itens.not.empty.list=Pedido não pode ser realizado sem itens.
