Mensagens de validacoes

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -9,4 +9,7 @@ cliente.not.null=Campo cliente é obrigatorio.
 total.not.null=Campo total é obrigatorio.
 
 cpf.not.valid=Informe um CPF valido.
+
 itens.not.empty.list=Pedido não pode ser realizado sem itens.
+login.not.empty="Login é obrigatório".
+senha.not.empty="Senha é obrigatório".
