--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-security.jwt.expiracao=30
-security.jwt.chave-assinatura=YSBsZW1icmUgw6kgYnJhbmNh
+security.jwt.expiracao=1440
+security.jwt.chave-assinatura=${CHAVE_ASSINATURA}
